# auroragaze

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  _capture.py  fly.toml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/corpus/: 1859-09-carrington.txt  1989-03-quebec.txt  2000-07-bastille-day.txt  2003-10-halloween-storms.txt  2015-03-st-patricks.txt  2017-09-stephanie.txt  2022-02-starlink-loss.txt  2023-04-anzac.txt  2023-11-southern-storm.txt  2024-05-gannon-g5.txt  2024-10-g4-october.txt  2025-03-cycle25-g3.txt  2025-08-g2-coronal-hole.txt  2026-02-cycle25-decline.txt  aurora-au-bom-overview.txt  aurora-nz-march-2023.txt  aurora-sa-may-2024.txt  aurora-tas-aug-2023-bruny.txt  aurora-tas-may-2024-fleurieu.txt  aurora-tas-nov-2023.txt  aurora-vic-mar-2024-promontory.txt  aurora-vic-may-2024.txt  aurora-vic-sep-2022-otways.txt  ref-akasofu-boundary.txt  ref-aurora-physics.txt  ref-drag-table.txt  ref-failure-modes.txt  ref-fleet-actions.txt  ref-jb2008-density.txt  ref-noaa-kp-scale.txt  sat-anik-1994.txt  sat-galaxy-15-2010.txt  sat-galileo-2017.txt  sat-gps-iia-1989.txt  sat-telstar-401-1997.txt
deploy/: hetzner.md
docs/decisions/: 0001-llm-provider.md  0002-graph-shape.md  0003-rag-stack.md  0004-mcp-scope.md  0005-physics-not-llm.md  0006-radius-and-ranking.md
eval/: calibration.md  golden_set.jsonl  judge.py  results.json  results_judged.json  run_eval.py
examples/: fleet.json
frontend/: index.html
src/auroragaze/: __main__.py  config.py  graph.py  llm.py  schemas.py
(+35 files in other folders)
